name:                migration-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/migration-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Main
    DB0
    DB1
    DB2

  build-depends:
    aeson,
    base >= 4.7 && < 5,
    bytestring,
    hedgehog,
    lens,
    lens-aeson,
    selda,
    selda-sqlite,
    split,
    text,
    time

  default-language:    Haskell2010
  default-extensions:
    RecordWildCards
    OverloadedStrings
    ScopedTypeVariables
    TypeOperators
  ghc-options:         -Wall -O2

executable migration-test
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:
    base,
    migration-test
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/migration-test
